v1.0.0/modules/schema/pages/class/EnergyTransaction.adoc
= `EnergyTransaction`
:toclevels: 4


+++Specifies the schedule for energy transfers between interchange areas that are necessary to satisfy the associated interchange transaction.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:EnergyTransaction`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Document.adoc[`Document`]
*** *`EnergyTransaction`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
EnergyTransaction {
  style {
    fill: "#fffbef"
    shadow: true
  }
}











EnergyPriceCurve {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



EnergyProduct {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



TieLine {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



LossProfile {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



SubControlArea {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



CurtailmentProfile {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



TransmissionReservation {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



EnergyProfile {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



SubControlArea {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ElectronicAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ActivityRecord {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Author {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Editor {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Approver {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Issuer {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}








EnergyTransaction -> EnergyPriceCurve: EnergyPriceCurves


EnergyTransaction -> EnergyProduct: EnergyProduct


EnergyTransaction -> TieLine: TieLines


EnergyTransaction -> LossProfile: LossProfiles


EnergyTransaction -> SubControlArea: Import_SubControlArea


EnergyTransaction -> CurtailmentProfile: CurtailmentProfiles


EnergyTransaction -> TransmissionReservation: TransmissionReservation


EnergyTransaction -> EnergyProfile: EnergyProfiles


EnergyTransaction -> SubControlArea: Export_SubControlArea


EnergyTransaction -> Status: docStatus


EnergyTransaction -> ElectronicAddress: electronicAddress


EnergyTransaction -> Status: status


EnergyTransaction -> ActivityRecord: ActivityRecord


EnergyTransaction -> ConfigurationEvent: ConfigurationEvents


EnergyTransaction -> Author: Author


EnergyTransaction -> Editor: Editor


EnergyTransaction -> Approver: Approver


EnergyTransaction -> Issuer: Issuer


EnergyTransaction -> DiagramObject: DiagramObjects


EnergyTransaction -> InstanceSet: InstanceSet


EnergyTransaction -> Name: Names


EnergyTransaction -> ChangeSetMember: PropertiesCIMDataObject


EnergyTransaction -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<EnergyProduct,`EnergyProduct`>>
| 1
| xref::class/EnergyProduct.adoc[`EnergyProduct`]
| +++The "Source" for an EnergyTransaction is an EnergyProduct which is injected into a ControlArea. Typically this is a ServicePoint.+++

| <<Export_SubControlArea,`Export_SubControlArea`>>
| 1
| xref::class/SubControlArea.adoc[`SubControlArea`]
| +++Energy is transferred between interchange areas+++

| <<Import_SubControlArea,`Import_SubControlArea`>>
| 1
| xref::class/SubControlArea.adoc[`SubControlArea`]
| +++Energy is transferred between interchange areas+++

| <<EnergyProfiles,`EnergyProfiles`>>
| 1..*
| xref::class/EnergyProfile.adoc[`EnergyProfile`]
| +++An EnergyTransaction shall have at least one EnergyProfile.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<TransmissionReservation,`TransmissionReservation`>>
| 0..1
| xref::class/TransmissionReservation.adoc[`TransmissionReservation`]
| n/a

| <<capacityBacked,`capacityBacked`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Interchange capacity flag. When the flag is set to true, it indicates a transaction is capacity backed.+++

| <<congestChargeMax,`congestChargeMax`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Maximum congestion charges in monetary units.+++

| <<deliveryPointP,`deliveryPointP`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Delivery point active power.+++

| <<energyMin,`energyMin`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Transaction minimum active power if dispatchable.+++

| <<firmInterchangeFlag,`firmInterchangeFlag`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Firm interchange flag indicates whether or not this energy transaction can be changed without potential financial consequences.+++

| <<payCongestion,`payCongestion`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Willing to Pay congestion flag+++

| <<reason,`reason`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Reason for energy transaction.+++

| <<receiptPointP,`receiptPointP`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Receipt point active power.+++

| <<state,`state`>>
| 0..1
| xref::enumeration/EnergyTransactionType.adoc[`EnergyTransactionType`]
| +++{ Approve \| Deny \| Study }+++

| <<CurtailmentProfiles,`CurtailmentProfiles`>>
| 0..*
| xref::class/CurtailmentProfile.adoc[`CurtailmentProfile`]
| +++An EnergyTransaction may be curtailed by any of the participating entities.+++

| <<EnergyPriceCurves,`EnergyPriceCurves`>>
| 0..*
| xref::class/EnergyPriceCurve.adoc[`EnergyPriceCurve`]
| n/a

| <<LossProfiles,`LossProfiles`>>
| 0..*
| xref::class/LossProfile.adoc[`LossProfile`]
| +++An EnergyTransaction may have a LossProfile.+++

| <<TieLines,`TieLines`>>
| 0..*
| xref::class/TieLine.adoc[`TieLine`]
| +++A dynamic energy transaction can act as a pseudo tie line.+++

| <<Approver,`Approver`>>
| 0..1
| xref::class/Approver.adoc[`Approver`]
| +++Approver of this document.+++

| <<Author,`Author`>>
| 0..1
| xref::class/Author.adoc[`Author`]
| +++Author of this document.+++

| <<Editor,`Editor`>>
| 0..1
| xref::class/Editor.adoc[`Editor`]
| +++Editor of this document.+++

| <<Issuer,`Issuer`>>
| 0..1
| xref::class/Issuer.adoc[`Issuer`]
| +++Issuer of this document.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<authorName,`authorName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Name of the author of this document.+++

| <<comment,`comment`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Free text comment.+++

| <<createdDateTime,`createdDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time that this document was created.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<docStatus,`docStatus`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

| <<electronicAddress,`electronicAddress`>>
| 0..1
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++

| <<lastModifiedDateTime,`lastModifiedDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<revisionNumber,`revisionNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Revision number for this document.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

| <<subject,`subject`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document subject.+++

| <<title,`title`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document title.+++

| <<type,`type`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

| <<ActivityRecord,`ActivityRecord`>>
| 0..*
| xref::class/ActivityRecord.adoc[`ActivityRecord`]
| +++The activity record for a document+++

| <<ConfigurationEvents,`ConfigurationEvents`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this document.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#ActivityRecord]
=== `ActivityRecord`
+++The activity record for a document+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ActivityRecord`
| Cardinality
| 0..*
| Type
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Approver]
=== `Approver`
+++Approver of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Approver`
| Cardinality
| 0..1
| Type
| xref::class/Approver.adoc[`Approver`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Author]
=== `Author`
+++Author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Author`
| Cardinality
| 0..1
| Type
| xref::class/Author.adoc[`Author`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#authorName]
=== `authorName`
+++Name of the author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.authorName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#capacityBacked]
=== `capacityBacked`
+++Interchange capacity flag. When the flag is set to true, it indicates a transaction is capacity backed.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.capacityBacked`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#comment]
=== `comment`
+++Free text comment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.comment`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#congestChargeMax]
=== `congestChargeMax`
+++Maximum congestion charges in monetary units.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.congestChargeMax`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#createdDateTime]
=== `createdDateTime`
+++Date and time that this document was created.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.createdDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#CurtailmentProfiles]
=== `CurtailmentProfiles`
+++An EnergyTransaction may be curtailed by any of the participating entities.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.CurtailmentProfiles`
| Cardinality
| 0..*
| Type
| xref::class/CurtailmentProfile.adoc[`CurtailmentProfile`]


|===

//[discrete]
[#deliveryPointP]
=== `deliveryPointP`
+++Delivery point active power.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.deliveryPointP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#docStatus]
=== `docStatus`
+++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.docStatus`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Editor]
=== `Editor`
+++Editor of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Editor`
| Cardinality
| 0..1
| Type
| xref::class/Editor.adoc[`Editor`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#energyMin]
=== `energyMin`
+++Transaction minimum active power if dispatchable.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.energyMin`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#EnergyPriceCurves]
=== `EnergyPriceCurves`


[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.EnergyPriceCurves`
| Cardinality
| 0..*
| Type
| xref::class/EnergyPriceCurve.adoc[`EnergyPriceCurve`]


|===

//[discrete]
[#EnergyProduct]
=== `EnergyProduct`
+++The "Source" for an EnergyTransaction is an EnergyProduct which is injected into a ControlArea. Typically this is a ServicePoint.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.EnergyProduct`
| Cardinality
| 1
| Type
| xref::class/EnergyProduct.adoc[`EnergyProduct`]


|===

//[discrete]
[#EnergyProfiles]
=== `EnergyProfiles`
+++An EnergyTransaction shall have at least one EnergyProfile.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.EnergyProfiles`
| Cardinality
| 1..*
| Type
| xref::class/EnergyProfile.adoc[`EnergyProfile`]


|===

//[discrete]
[#Export_SubControlArea]
=== `Export_SubControlArea`
+++Energy is transferred between interchange areas+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.Export_SubControlArea`
| Cardinality
| 1
| Type
| xref::class/SubControlArea.adoc[`SubControlArea`]


|===

//[discrete]
[#firmInterchangeFlag]
=== `firmInterchangeFlag`
+++Firm interchange flag indicates whether or not this energy transaction can be changed without potential financial consequences.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.firmInterchangeFlag`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#Import_SubControlArea]
=== `Import_SubControlArea`
+++Energy is transferred between interchange areas+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.Import_SubControlArea`
| Cardinality
| 1
| Type
| xref::class/SubControlArea.adoc[`SubControlArea`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Issuer]
=== `Issuer`
+++Issuer of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Issuer`
| Cardinality
| 0..1
| Type
| xref::class/Issuer.adoc[`Issuer`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#lastModifiedDateTime]
=== `lastModifiedDateTime`
+++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.lastModifiedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#LossProfiles]
=== `LossProfiles`
+++An EnergyTransaction may have a LossProfile.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.LossProfiles`
| Cardinality
| 0..*
| Type
| xref::class/LossProfile.adoc[`LossProfile`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#payCongestion]
=== `payCongestion`
+++Willing to Pay congestion flag+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.payCongestion`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#reason]
=== `reason`
+++Reason for energy transaction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.reason`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#receiptPointP]
=== `receiptPointP`
+++Receipt point active power.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.receiptPointP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#revisionNumber]
=== `revisionNumber`
+++Revision number for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.revisionNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#state]
=== `state`
+++{ Approve | Deny | Study }+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.state`
| Cardinality
| 0..1
| Type
| xref::enumeration/EnergyTransactionType.adoc[`EnergyTransactionType`]


|===

//[discrete]
[#status]
=== `status`
+++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#subject]
=== `subject`
+++Document subject.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.subject`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TieLines]
=== `TieLines`
+++A dynamic energy transaction can act as a pseudo tie line.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.TieLines`
| Cardinality
| 0..*
| Type
| xref::class/TieLine.adoc[`TieLine`]


|===

//[discrete]
[#title]
=== `title`
+++Document title.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.title`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#TransmissionReservation]
=== `TransmissionReservation`


[cols="h,4",width=65%]
|===
| URI
| `cim:EnergyTransaction.TransmissionReservation`
| Cardinality
| 0..1
| Type
| xref::class/TransmissionReservation.adoc[`TransmissionReservation`]


|===

//[discrete]
[#type]
=== `type`
+++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===


